# git-manager

./: Cargo.toml  DESIGN.md  LICENSE  README.md  REUSE.toml  TODO.md  flake.nix  rustfmt.toml  smartget.toml
git-manager/: Cargo.toml  TODO.md  config.xml
git-manager-xml/: Cargo.toml
git-manager-xml-test/: Cargo.toml  repo.xml  test.xml
git-manager-xml-test/src/: main.rs
git-manager-xml/src/: lib.rs
git-manager/src/: cfg.rs  cli.rs  config.xml  error.rs  main.rs  post-update.sh
smartget/: Cargo.toml  example.xml
smartget/src/: main.rs
src/: main.rs
